--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.2.1",
+    "immutable": "^4.0.0-rc.12",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.7",
+    "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.7.0",
+    "react-router-bootstrap": "^0.24.4",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3"
   },
   "scripts": {
